# grammar-trainer-langgraph

./: .env.example  .gitignore  README.md  messages-en.py  messages.py  pyproject.toml
agent/: __init__.py  graph.py  nodes.py  prompts.py  state.py
cli/: gen_secret.py  list_models.py  main.py  probe.py
docs/superpowers/plans/: 2026-06-05-english-grammar.md
docs/superpowers/specs/: 2026-06-05-english-grammar-design.md
tests/: test_graph.py  test_messages.py  test_nodes.py  test_prompts.py  test_state.py
tgbot/: handlers.py  log_config.py  polling.py  webhook.py
