[project]
name = "english-grammar"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=1.0",
    "langchain-openai>=0.2",
    "langchain-google-genai>=4.0",
    "python-telegram-bot[webhooks]>=21.0",
    "python-dotenv>=1.0",
    "zhipuai>=2.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent", "cli", "tgbot"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
